@@ -4,7 +4,6 @@ import com.google.common.collect.Maps;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import net.minecraft.advancements.CriteriaTriggers;
 import net.minecraft.core.BlockPos;
@@ -16,10 +15,10 @@ import net.minecraft.network.protocol.game.DebugPackets;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.stats.Stats;
+import net.minecraft.tags.PoiTypeTags;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.ai.village.poi.PoiManager;
 import net.minecraft.world.entity.ai.village.poi.PoiRecord;
-import net.minecraft.world.entity.ai.village.poi.PoiType;
 import net.minecraft.world.level.GameRules;
 import net.minecraft.world.level.dimension.BuiltinDimensionTypes;
 import net.minecraft.world.level.dimension.DimensionType;
@@ -93,8 +92,8 @@ public class Raids extends SavedData {
                 BlockPos var1 = param0.blockPosition();
                 List<PoiRecord> var2 = this.level
                     .getPoiManager()
-                    .getInRange(PoiType.ALL, var1, 64, PoiManager.Occupancy.IS_OCCUPIED)
-                    .collect(Collectors.toList());
+                    .getInRange(param0x -> param0x.is(PoiTypeTags.VILLAGE), var1, 64, PoiManager.Occupancy.IS_OCCUPIED)
+                    .toList();
                 int var3 = 0;
                 Vec3 var4 = Vec3.ZERO;
 
